added missing service account binding to co-http's servo

--- a/k8s/servo.yaml
+++ b/k8s/servo.yaml
@@ -17,6 +17,7 @@ spec:
       labels:
         comp: optune-servo
     spec:
+      serviceAccountName: optune-servo
       volumes:
       - name: auth
         secret:
