--- a/canary/debug.yaml
+++ b/canary/debug.yaml
@@ -22,10 +22,10 @@ spec:
     spec:
       containers:
       - name: debug
-        image: 424617791587.dkr.ecr.us-west-2.amazonaws.com/opsani/debugging-web:latest
-        # image: ubuntu:latest
-        # command: ["/bin/bash"]
-        # args: ["-c", "i=0; while [ 1 ]; do echo \"up for $i minutes\"; i=$((i+1)); sleep 60; done"]
+        # image: 424617791587.dkr.ecr.us-west-2.amazonaws.com/opsani/debugging-web:latest
+        image: ubuntu:latest
+        command: ["/bin/bash"]
+        args: ["-c", "i=0; while [ 1 ]; do echo \"up for $i minutes\"; i=$((i+1)); sleep 60; done"]
         resources:
           limits:
             cpu: 250m
