--- a/k8s/rbac.yaml
+++ b/k8s/rbac.yaml
@@ -12,6 +12,9 @@ rules:
 - apiGroups: ["extensions"]
   resources: ["deployments"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
