Prepar the yaml file for macro expansion.
The macro expansion will just use search and replace base
on a dictionary. e.g. using bash we can create the config file as:

cat conf <<EOF
ACCOUNT=abc.com
EOF

Expand the macro we can do:
. conf
sed -i -e "s/@@ACCOUNT@@/$ACCOUNT/g" k8s/servo.yaml

--- a/k8s/optune-auth.yaml
+++ b/k8s/optune-auth.yaml
@@ -4,4 +4,4 @@ metadata:
   name: optune-auth
 type: Opaque
 data:
-  token: myauthtoken1  #CHANGEME: cat token | base64
+  token: @@OPTUNE_AUTH_TOKEN_BASE64@@  # CHANGEME: cat token | base64
