--- a/k8s/servo.yaml
+++ b/k8s/servo.yaml
@@ -22,6 +22,10 @@ spec:
       - name: auth
         secret:
           secretName: optune-auth
+      - name: config
+        configMap:
+          name: optune-servo-config
+
       containers:
       - name: main
         image: opsani/servo-k8s-ab
@@ -39,3 +43,47 @@ spec:
         - name: auth
           mountPath: '/etc/optune-auth'
           readOnly: true
+        - name: config
+          mountPath: /servo/config.yaml
+          subPath: config.yaml
+          readOnly: true
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: optune-servo-config
+data:
+  config.yaml: |
+    k8s:
+      application:
+        components:
+          c1:
+            settings:
+              cpu:
+                min: 0.1
+                max: 1.8
+                step: 0.1
+              replicas:
+                min: 1
+                max: 2
+                step: 1
+          c2:
+            settings:
+              cpu:
+                min: 0.1
+                max: 1.8
+                step: 0.1
+              replicas:
+                min: 1
+                max: 2
+                step: 1
+          c3:
+            settings:
+              cpu:
+                min: 0.1
+                max: 1.8
+                step: 0.1
+              replicas:
+                min: 1
+                max: 2
+                step: 1
