--- a/k8s-canary-envoy/opsani-servo.yaml
+++ b/k8s-canary-envoy/opsani-servo.yaml
@@ -78,26 +78,26 @@ data:
     prom:
       metrics:
         main_request_rate: 
-          query: sum(rate(envoy_cluster_upstream_rq_total{envoy_cluster_name="web-service_80",role="main"}[1m]))
+          query: sum(rate(envoy_cluster_upstream_rq_total{app="web",role="main"}[1m]))
           unit: rps
         canary_request_rate:
-          query: sum(rate(envoy_cluster_upstream_rq_total{envoy_cluster_name="web-service_80",role="opsani-canary"}[1m]))
+          query: sum(rate(envoy_cluster_upstream_rq_total{app="web",role="opsani-canary"}[1m]))
           unit: rps
         main_p90_time:
-          query: histogram_quantile(0.9,sum(rate(envoy_cluster_external_upstream_rq_time_bucket{envoy_cluster_name="web-service_80",role="main"}[1m])) by (envoy_cluster_name, le))
+          query: histogram_quantile(0.9,sum(rate(envoy_cluster_external_upstream_rq_time_bucket{app="web",role="main"}[1m])) by (envoy_cluster_name, le))
           unit: ms
         canary_p90_time:
-          query: histogram_quantile(0.9,sum(rate(envoy_cluster_external_upstream_rq_time_bucket{envoy_cluster_name="web-service_80",role="opsani-canary"}[1m])) by (envoy_cluster_name, le))
+          query: histogram_quantile(0.9,sum(rate(envoy_cluster_external_upstream_rq_time_bucket{app="web",role="opsani-canary"}[1m])) by (envoy_cluster_name, le))
           unit: ms
         main_error_rate:
-          query: sum(rate(envoy_cluster_external_upstream_rq_xx{envoy_cluster_name="web-service_80",envoy_response_code_class!="2",role="main"}[1m]))
+          query: sum(rate(envoy_cluster_external_upstream_rq_xx{app="web",envoy_response_code_class!="2",role="main"}[1m]))
           unit: rpm
         canary_error_rate:
-          query: sum(rate(envoy_cluster_external_upstream_rq_xx{envoy_cluster_name="web-service_80",envoy_response_code_class!="2",role="opsani-canary"}[1m]))
+          query: sum(rate(envoy_cluster_external_upstream_rq_xx{app="web",envoy_response_code_class!="2",role="opsani-canary"}[1m]))
           unit: rpm
         main_median_response_time:
-          query: avg(histogram_quantile(0.5,rate(envoy_cluster_external_upstream_rq_time_bucket{envoy_cluster_name="web-service_80",role="main"}[1m])))
+          query: avg(histogram_quantile(0.5,rate(envoy_cluster_external_upstream_rq_time_bucket{app="web",role="main"}[1m])))
           unit: ms 
         canary_median_response_time:
-          query: avg(histogram_quantile(0.5,rate(envoy_cluster_external_upstream_rq_time_bucket{envoy_cluster_name="web-service_80",role="opsani-canary"}[1m])))
+          query: avg(histogram_quantile(0.5,rate(envoy_cluster_external_upstream_rq_time_bucket{app="web",role="opsani-canary"}[1m])))
           unit: ms
