--- a/k8s-envoy/opsani-servo-deployment.yaml
+++ b/k8s-envoy/opsani-servo-deployment.yaml
@@ -1,6 +1,4 @@
----
-#apiVersion: apps/v1
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: opsani-servo
@@ -28,19 +26,15 @@ spec:
           name: opsani-servo-config
       containers:
       - name: main
-        image: opsani/servo-k8s-ab
+        image: opsani/servo-k8s-prom-job:latest
         args:
-        - 'co-http' #CHANGEME - application ID
+        - '@@APP_ID@@' #CHANGEME - application ID
         - '--auth-token=/etc/optune-auth/token'
         env:
         - name: OPTUNE_ACCOUNT
-          value: 'dev.opsani.com'  #CHANGEME - account name
+          value: '@@ACCOUNT@@'  #CHANGEME - account name
         - name: OPTUNE_USE_DEFAULT_NAMESPACE
           value: '1'
-        - name: OPTUNE_PERF
-          value: opsani.time_slo(metrics['time per request'], target=100)
-        - name: AB_TEST_URL
-          value: 'http://twotier:80/'
         volumeMounts:
         - name: auth
           mountPath: '/etc/optune-auth'
@@ -49,34 +43,10 @@ spec:
           mountPath: /servo/config.yaml
           subPath: config.yaml
           readOnly: true
-
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: opsani-servo-config
-data:
-  config.yaml: |
-    k8s:
-      application:
-        components:
-          front:
-            settings:
-              cpu:
-                min: 0.1
-                max: 2
-                step: 0.1
-              replicas:
-                min: 1
-                max: 4
-                step: 1
-          back:
-            settings:
-              cpu:
-                min: 0.1
-                max: 2
-                step: 0.1
-              replicas:
-                min: 1
-                max: 4
-                step: 1
+        resources:
+          limits:
+            cpu: 250m
+            memory: 256Mi
+          requests:
+            cpu: 125m
+            memory: 128Mi
