--- a/k8s-envoy/base/opsani-servo-configmap.yaml
+++ b/k8s-envoy/base/opsani-servo-configmap.yaml
@@ -19,8 +19,8 @@ data:
                 min: 1
                 max: 4
     prom:
-      prometheus_endpoint: 
-      metrics: http://prometheus.svc.opsani-monitoring:9090
+      prometheus_endpoint: http://prometheus.svc.opsani-monitoring:9090
+      metrics: 
         main_request_rate: 
           query: sum(rate(envoy_cluster_upstream_rq_total{app="web",role="main"}[1m]))
           unit: rps
