Refactored Kustomize projects
Base is now servo-base and servo-load
 - modifications belong in servo-load
ingress includes ingress-base and ingress-aws
promtheus is its own Kustomize document set
the app "web" and the "web-main" deployment are also in their own directory

--- a/k8s-envoy/coconfig.yaml
+++ b/k8s-envoy/coconfig.yaml
@@ -2,12 +2,7 @@ adjustment:
   control: {}
 measurement:
   control:
-    load:
-      test_url: 'http://web:80'
-      service: web
-      n_clients: 30
-      n_requests: 10000000
-      t_limit: 300
+    load: {}
     warmup: 0
     duration: 300
     past: 60
