--- a/k8s-envoy/ingress-aws-l4/kustomization.yaml
+++ b/k8s-envoy/ingress-aws-l4/kustomization.yaml
@@ -1,9 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+  - aws-service-l4.yaml
 patchesStrategicMerge:
-- opsani-servo-config-map-hey.yaml
-- opsani-servo-account.yaml
+  - aws-patch-configmap-l4.yaml
 
 bases:
-- ../base
+  - ../ingress-base
