--- a/k8s-envoy/servo-load/opsani-servo-config-map-vegeta.yaml
+++ b/k8s-envoy/servo-load/opsani-servo-config-map-vegeta.yaml
@@ -30,14 +30,10 @@ data:
         main_median_response_time:
           query: avg(histogram_quantile(0.5,rate(envoy_cluster_external_upstream_rq_time_bucket{app="web",role="main"}[1m])))
           unit: ms
-    #   control:
-    #     warmup: 0
-    #     duration: 300
-    #     past: 60
-    # hey:
-    #   load:
-    #     test_url: 'http://web:80'
-    #     service: web
-    #     n_clients: 30
-    #     n_requests: 10000000
-    #     t_limit: 300
+    vegeta:
+      rate: 30000/m
+      duration: 5m
+      target: GET http://abedce9d672dc11ea90d5064f22c1252-668236351.us-west-2.elb.amazonaws.com:80/
+      workers: 50
+      max-workers: 100
+      interactive: true
