--- a/coconfig.yaml
+++ b/coconfig.yaml
@@ -3,13 +3,9 @@ adjustment:
 measurement:
   control:
     duration: 300
-    load:
-      n_clients: 30
-      n_requests: 10000000
-      service: web
-      t_limit: 300
-      test_url: http://web:80
+    load: {}
     past: 60
     warmup: 0
 optimization:
+  mode: saturation
   perf: metrics['main_request_rate']
