--- a/k8s-canary-envoy/opsani-servo.yaml
+++ b/k8s-canary-envoy/opsani-servo.yaml
@@ -1,6 +1,5 @@
 ---
-#apiVersion: apps/v1
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: opsani-servo
@@ -18,11 +17,11 @@ spec:
       labels:
         comp: opsani-servo
     spec:
-      serviceAccountName: opsani-servo # comment out for older k8s versions
+      serviceAccountName: opsani-servo
       volumes:
       - name: auth
         secret:
-          secretName: optune-auth-co-http   #CHANGEME - application's token for Optune
+          secretName: optune-auth
       - name: config
         configMap:
           name: opsani-servo-config
@@ -30,19 +29,19 @@ spec:
       - name: main
         image: opsani/servo-k8s-prom-hey:latest
         args:
-        - '@@APP_ID@@' #CHANGEME - application ID
+        - 'robert'
         - '--auth-token=/etc/optune-auth/token'
         env:
         - name: OPTUNE_ACCOUNT
-          value: '@@ACCOUNT@@'  #CHANGEME - account name
+          value: 'kumul.us'
         - name: OPTUNE_USE_DEFAULT_NAMESPACE
           value: '1'
-        - name: OPTUNE_PERF
-          value: opsani.time_slo(canary_median_response_time, target=100)
+#        - name: OPTUNE_PERF
+#          value: opsani.time_slo(canary_median_response_time, target=100)
         - name: PROMETHEUS_ENDPOINT
-          value: 'http://prom.svc.cluster.local:9090' #CHANGEME Prometheus API
+          value: 'http://prometheus.opsani-monitoring.svc.cluster.local:9090' #CHANGEME Prometheus API
         - name: HEY_TEST_URL
-          value: 'http://web:80/'
+          value: 'http://web.robert.svc:80/'
         volumeMounts:
         - name: auth
           mountPath: '/etc/optune-auth'
@@ -62,19 +61,21 @@ metadata:
   name: opsani-servo-config
 data:
   config.yaml: |
+    optimization:
+      mode: canary
     k8s:
       application:
         components:
-          web:
+          web-canary:
             settings:
               cpu:
                 min: 0.1
                 max: 2
                 step: 0.1
-              replicas:
-                min: 1
-                max: 4
-                step: 1
+              mem:
+                min: 0.125
+                max: 2
+                step: 0.125
     prom:
       metrics:
         main_request_rate: 
