--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -44,7 +44,7 @@ jobs:
           with:
             context: .
             push: true
-            tags: ghcr.io/${{ github.repository_owner }}/image-name:${{ github.event.release.tag_name }}
+            tags: ghcr.io/${{ github.repository_owner }}/co-http:${{ github.event.release.tag_name }}
             labels: |
                   org.opencontainers.image.title=co-http
                   org.opencontainers.image.description=Simple workload for testing performance and optimization
